config/k8s/Xperimantal/kong/konga/ingress-konga.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konga-ingress
  namespace: kong
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
#    - host: konga.yourdomain.com
     - http:
        paths:
          - path: "/konga"
            pathType: Prefix
            backend:
              service:
                name: konga
                port:
                  number: 80
